--- a/playground/instance.html
+++ b/playground/instance.html
@@ -15,8 +15,10 @@
     const vm = new Vue({
       el: '#app',
       data: {
-        message: 'Hell Jeoseon'
-      }
+        message: 'h1',
+      }, method: {
+
+      },
     });
   </script>
 </body>
