--- a/playground/component.html
+++ b/playground/component.html
@@ -9,7 +9,13 @@
 <body>
   <div id="app">
     <app-header></app-header>
-    <app-content>{{ message }}</app-content>
+    <div>{{ message }}</div>
+    <app-footer></app-footer>
+  </div>
+
+  <div id="app2">
+    <app-header></app-header>
+    <div>{{ message }}</div>
     <app-footer></app-footer>
   </div>
 
@@ -21,23 +27,31 @@
       template: '<h1>Header</h1>',
     });
 
-    Vue.component('app-content', {
-      template: `<div>component</div>`,
-    });
-
-    const vm = new Vue({
+    new  Vue({
       el: '#app',
       data: {
         message: 'hello VUE!!',
-      }, method: {
+      },
+      methods: {
 
-      }, components: { // 지역 컴포넌트
+      },
+      components: { // 지역 컴포넌트
         // '컴포넌트 이름': 컴포넌트 내용
         'app-footer': {
           template: '<footer>footer</footer>'
         }
       }
     });
+
+    new Vue({
+      el: '#app2',
+      data: {
+        message: 'app2'
+      },
+      components: {
+        
+      }
+    })
   </script>
 </body>
 </html>
