--- a/playground/props.html
+++ b/playground/props.html
@@ -9,7 +9,7 @@
 <body>
   <div id="app">
     <app-header v-bind:propsdata="message"></app-header>
-    <app-content v-bind:propsdata="num"></app-content>
+    <app-content v-bind:number="num"></app-content>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
   <script>
